--- a/app/views/layouts/feed.html.erb
+++ b/app/views/layouts/feed.html.erb
@@ -20,6 +20,11 @@
   <body>
     <p class="navbar-text float-right">
     <% if user_signed_in? %>
+
+      <form method="GET" action="/">
+        <input type="text" name="filter">
+        <input type="submit" name="Submit">
+      </form>
       <ul>
         <% @users.each do |user| %>
           <div class="card">
