Added real time for comment production

--- a/app/views/layouts/comment_feed.html.erb
+++ b/app/views/layouts/comment_feed.html.erb
@@ -18,7 +18,10 @@
   </head>
 
   <body>
-    <p class="navbar-text float-right">
+    <h1>Action Cable Example</h1>
+
+    <div id="messages"></div>
+   <!--  <p class="navbar-text float-right">
     <% if user_signed_in? %>
       <ul>
         <% @comments.each do |comment| %>
@@ -30,6 +33,6 @@
       <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     <% else %>
     <% end %>
-    </p>
+    </p> -->
   </body>
 </html>
