--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <html>
   <head>
     <style>
-      html { background-color: beige; }
-          .text_input {
+    html { background-color: #4469B0; }
+    .text_input {
       width: 80%;
       padding: 12px 20px;
       margin: 8px 0;
@@ -11,43 +11,73 @@
       border-radius: 4px;
       box-sizing: border-box;
     }
+    h1 {
+      font-family: 'Montserrat';
+    }
     .label {
-      font-size: 28px;
+      font-size: 14px;
+      font-family: 'Montserrat';
+    }
+    .container {
+      text-align: center;
+    }
+    .content {
+      display: inline-block;
+      width: 50%;
+    }
+    .card {
+        display: inline-block;
+        width: 30%;
+        border-style: solid;
+        border-radius: 5px;
+        border-width: 1px;
+        border-color: #DCDCDC;
+        margin-bottom: 10px;
+        background-color: white;
+    }
+    .header {
+      margin-top: 0px;
+      background-color: #E9EBEE;
     }
     .button-login {
-      background-color: #4CAF50; /* Green */
+      background-color: #4469B0; /* Green */
+      font-family: 'Montserrat';
       border: none;
+      margin-top: 5%;
       color: white;
       padding: 15px 32px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       text-align: center;
       text-decoration: none;
+      width: 60%;
       display: inline-block;
       font-size: 16px;
     }
     </style>
-
+  </head>
   <body>
-  <%= image_tag "nosedive" %>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="container">
+    <div class="card">
+    <div class="header">
+      <img src="/assets/nosedive.png" height="200px" width="250px" />
+      <h1>Nosedive</h1>
+    </div>
+    <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
-        <%= f.label :email, class: 'label' %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'text_input' %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'email', class: 'text_input' %>
       </div>
 
       <div class="field">
-        <%= f.label :password, class: 'label' %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password", class: 'text_input' %>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: 'New Password', class: 'text_input' %>
       </div>
 
       <div class="field">
-        <%= f.label :password_confirmation, class: 'label' %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'text_input' %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Confirm Password', class: 'text_input' %>
       </div>
 
       <div class="field">
@@ -57,9 +87,11 @@
 
       <div class="actions">
         <%= f.submit "Sign up", class: 'button-login' %>
+          <%= link_to "Log in", new_session_path(resource_name), class: 'button-login' %><br />
       </div>
-    <% end %>
 
-    <%= render "devise/shared/links" %>
+    <% end %>
+    </div>
+    </div>
   </body>
 </html>
