--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -1,12 +1,25 @@
 <html>
 	<head>
 		<%= csrf_meta_tags %>
-
 		<style>
-		html { background-color: beige; }
+		html { background-color: #E9EBEE;
+			font-family: 'Montserrat';
+		 }
+		 .container {
+		 	text-align: center;
+		 }
+		.card { 
+			background-color: white; 
+			width: 50%;
+			padding: 10px;
+			border-radius: 5px;
+      		display: inline-block;
+		}
 		</style>
 	</head>
 	<body>
+	<div class="container">
+		<div class="card">
 		<h1><%= @user.name %></h1>
 		<% if @user.profile_img_url != nil %>
 			<%= image_tag  "#{ @user.profile_img_url }" %>
