--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -26,24 +26,30 @@
 			display: flex;
 
 		}
+		img {
+			width: 50px;
+			height: 50px;
+		}
 		</style>
 	</head>
 	<body>
 	<div class="container">
 		<div class="card">
 		<h1><%= @user.name %></h1>
-		<% if @user.profile_img_url != nil %>
-			<%= image_tag  "#{ @user.profile_img_url }" %>
+		<% if @user.avatar.attached? %>
+			<%= image_tag @user.avatar %>
+		<% else %>
+			<img src="/assets/nosedive.png" width="50px" height="50px" />
 		<% end %>
 		<h3> email: <%= @user.email %></h3>
 		<% if @comments.size != 0 %>
 			<% @comments.each do |comment| %>
 				<div class="comment-card">
 					<div class="flex">
-					<% if User.find_by(id: comment.created_user).profile_img_url == nil %>
+					<% if User.find_by(id: comment.created_user).avatar.attached? %>
+ 						<%= image_tag User.find_by(id: comment.created_user).avatar %>		
+ 					<% else %>
 						<img src="/assets/nosedive.png" width="50px" height="50px" />
-					<% else %>
-						<img src="/assets/<%= User.find_by(id: comment.created_user).profile_img_url %>" />
 					<% end %>
 					<h1><%= User.find_by(id: comment.created_user).name %> gave <%= comment.rating %></h1>
 					</div>
@@ -52,6 +58,15 @@
 				<br />
 			<% end %>
 		<% end %>
+		<% if @profile %>
+			<h2> Change Profile Picture </h2>
+			<form action="/profile_picture" method="POST" enctype="multipart/form-data">
+		 		<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+		 		<input type="hidden" value="<%= @user.id %>" name="id">
+				<input type="file" id="user_avatar" name="avatar" />				
+				<input type="submit">
+			</form>
+		<% else %>
 		    <h2> Add A New Review </h2>
 		 	<form action="/comments/create" method="POST">
 		 		<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
@@ -62,5 +77,6 @@
 		 		<br />
 		 		<input type="submit">
 		 	</form>
+		<% end %>
 	</body>
 </html>
