--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -52,15 +52,22 @@
 				<br />
 			<% end %>
 		<% end %>
-		    <h2> Add A New Review </h2>
-		 	<form action="/comments/create" method="POST">
-		 		<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-		 		<input type="hidden" value="<%= @user.id %>" name="id">
-		 		<h3>Comment: </h3><input type="textarea" name="text">
-		 		<h3>Rating: </h3> <input type="text" name="rating">
-		 		<br />
-		 		<br />
-		 		<input type="submit">
-		 	</form>
+	    <h2> Add A New Review </h2>
+	 	<form action="/comments/create" method="POST">
+	 		<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+	 		<input type="hidden" value="<%= @user.id %>" name="id">
+	 		<h3>Comment: </h3><input type="textarea" name="text">
+	 		<h3>Rating: </h3> <input type="text" name="rating">
+	 		<br />
+	 		<br />
+	 		<input type="submit">
+	 	</form>
+	 	<h2> Add as Friend </h2>
+	 	<form action="/connection/new" method="POST">
+	 		<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+	 		<input type="hidden" value="<%= @user.id %>" name="id_1">
+	 		<input type="hidden" value="<%= current_user.id %>" name="id_2">
+	 		<input type="submit">
+	 	</form>
 	</body>
 </html>
