Fixed broken links

--- a/app/views/layouts/feed.html.erb
+++ b/app/views/layouts/feed.html.erb
@@ -71,7 +71,7 @@
       <input type="submit" name="Submit">
     </form>
     <a class="active" href="/">Feed</a>
-    <a href="/comment/feed">Comments</a>
+    <a href="/commentfeed">Comments</a>
     <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     </div>
   </div>
