--- a/app/views/layouts/comment_feed.html.erb
+++ b/app/views/layouts/comment_feed.html.erb
@@ -62,7 +62,7 @@
     <img src="/assets/nosedive.png" height="50px" width="50px" style="margin-left: 10px;" />
     <div style="margin-right: 50px;">
       <a href="/">Feed</a>
-      <a class="active" href="/comment/feed">Comments</a>
+      <a class="active" href="/commentfeed">Comments</a>
       <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     </div>
   </div>
