--- a/app/views/layouts/feed.html.erb
+++ b/app/views/layouts/feed.html.erb
@@ -87,10 +87,11 @@
           <% else %>
             <h3><a href="/user/<%= user.id %>"><%= user.email %></a></h3>
           <% end %>
-          <% if user.profile_img_url == nil %>
-            <% user.profile_img_url = "nosedive" %>
-          <% end %> 
-          <%= image_tag  "#{ user.profile_img_url }" %> 
+          <% if user.avatar.attached? %>
+            <%= image_tag user.avatar %>
+          <% else %>
+            <img src="/assets/nosedive.png" width="50px" height="50px" />
+          <% end %>
           </div>
         <% end %>
       </ul>
