Added in height and width for feed

--- a/app/views/layouts/feed.html.erb
+++ b/app/views/layouts/feed.html.erb
@@ -6,6 +6,10 @@
     <%= csp_meta_tag %>
     <style>
       html { background-color: #E9EBEE; font-family: 'Montserrat';}
+      img {
+        width: 50px;
+        height: 50px;
+      }
       #navbar {
   overflow: hidden;
   background-color: #4469B0;
