Added in hardcoded s3 URL

--- a/app/views/layouts/comment_feed.html.erb
+++ b/app/views/layouts/comment_feed.html.erb
@@ -59,7 +59,7 @@
 
   <body>
     <div id="navbar" class="sticky">
-    <img src="/assets/nosedive.png" height="50px" width="50px" style="margin-left: 10px;" />
+    <img src="https://test-password-bucket.s3-us-west-2.amazonaws.com/nosedive.png" height="50px" width="50px" style="margin-left: 10px;" />
     <div style="margin-right: 50px;">
       <a href="/">Feed</a>
       <a class="active" href="/commentfeed">Comments</a>
