--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -42,20 +42,23 @@
 			<img src="/assets/nosedive.png" width="50px" height="50px" />
 		<% end %>
 		<h3> email: <%= @user.email %></h3>
+		<h3> Aggregate Rating: <%= @aggregate_rating %></h3>
 		<% if @comments.size != 0 %>
 			<% @comments.each do |comment| %>
-				<div class="comment-card">
-					<div class="flex">
-					<% if User.find_by(id: comment.created_user).avatar.attached? %>
- 						<%= image_tag User.find_by(id: comment.created_user).avatar %>		
- 					<% else %>
-						<img src="https://test-password-bucket.s3-us-west-2.amazonaws.com/nosedive.png" width="50px" height="50px" />
-					<% end %>
-					<h1><%= User.find_by(id: comment.created_user).name %> gave <%= comment.rating %></h1>
+        		<% cache(comment) do %>
+					<div class="comment-card">
+						<div class="flex">
+						<% if User.find_by(id: comment.created_user).avatar.attached? %>
+	 						<%= image_tag User.find_by(id: comment.created_user).avatar %>
+	 					<% else %>
+							<img src="https://test-password-bucket.s3-us-west-2.amazonaws.com/nosedive.png" width="50px" height="50px" />
+						<% end %>
+						<h1><%= User.find_by(id: comment.created_user).name %> gave <%= comment.rating %></h1>
+						</div>
+						<h3 style="position: relative; left: 80px;"><%= comment.text %></h3>
 					</div>
-					<h3 style="position: relative; left: 80px;"><%= comment.text %></h3>
-				</div>
-				<br />
+					<br />
+				<% end %>
 			<% end %>
 		<% end %>
 		<% if @profile %>
